# ImageCompression

./: .gitignore  BUILD_RUST.md  Cargo.toml  LICENSE  README.md  README_EN.md  app.go  app_test.go  build.spec  command_windows.go  go.mod  go.sum  main.go  requirements.txt  wails.json
.github/workflows/: build.yml  ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  GO_WAILS_REWRITE.md  README.md  USER_GUIDE.md
docs/plans/: 2026-03-24-image-compression-design.md  2026-03-24-image-compression-plan.md  2026-03-25-mac-ui-design.md  2026-03-25-mac-ui-plan.md  2026-03-25-phase5-design.md  task.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css  wails.d.ts
internal/compress/: avif.go  avif_test.go  batch.go  batch_test.go  image_preview.go  image_preview_test.go  preview.go  preview_test.go  resize.go  runner_other.go  runner_windows.go  runner_windows_test.go
internal/config/: config.go  config_test.go
internal/core/: scanner.go  scanner_test.go
internal/prepare/: prepare.go  prepare_test.go
internal/upload/: protocols.go  upload.go  upload_test.go
internal/workflow/: workflow.go  workflow_test.go
skills/image-compression/: SKILL.md
src/: cli.py  config.py  config.rs  config_test.rs  main.py  main.rs  theme.rs
src/cmd/: all.rs  compress.rs  mod.rs  prepare.rs  scan.rs  upload.rs
src/core/: compress.py  compress.rs  compress_tests.rs  mod.rs  prepare.py  prepare.rs  scanner.rs  upload.py  upload.rs  (+2 more)
tests/: cli_resize.rs
(+33 files in other folders)
