[package]
name = "imagecompression"
version = "0.2.0"
edition = "2021"
authors = ["ImageCompression Contributors"]
description = "Image preparation, compression (AVIF/WebP/JPEG) and upload (S3/FTP/SFTP) — TUI + CLI in pure Rust. pikpaktui-inspired."
license = "Apache-2.0"
readme = "README.md"
keywords = ["image", "compression", "avif", "tui", "cli", "ratatui", "s3"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "ImageCompression"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "default-tls", "json", "multipart"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "rayon"] }
unicode-width = "0.1"
suppaftp = { version = "6", default-features = false, features = ["default-tls"] }
ssh2 = { version = "0.9", optional = true }
socks = "0.3"
url = "2"
lazy_static = "1"
walkdir = "2"
regex = "1"
tempfile = "3"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[features]
default = ["sftp"]
# 启用 SFTP 协议支持。需要本机装有 OpenSSL(或 MinGW 工具链以便
# ssh2 自带 vendored-openssl 编译)。不开就只支持 S3 + FTP。
sftp = ["dep:ssh2"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
